# EdgePilot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requires.txt
edgepilot/: __init__.py  cli.py  config.py  db.py  models.py  usage.py
edgepilot/api/: __init__.py  main.py
edgepilot/api/routers/: metrics.py  policies.py  runs.py  tasks.py  usage.py
edgepilot/llm/: __init__.py  anthropic.py  gemini.py  ollama.py  provider.py
edgepilot/llm/prompts/: bottleneck.md  run_analysis.md  scheduling.md
edgepilot/mcp/: __init__.py  schemas.py  server.py  tools.py
edgepilot/metrics/: __init__.py  collector.py  gpu_linux.py  power_macos.py
edgepilot/scheduler/: __init__.py  core.py  policies.py  runner.py
edgepilot/tests/: test_metrics.py  test_scheduler.py
edgepilot/ui/: app.py
